--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "bot-noa",
   "version": "1.0.0",
-  "description": "Bot simple con funciones de moderación.",
-  "main": "index.js",
+  "description": "Bot de WhatsApp Noa con Baileys",
+  "main": "Index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node Index.js",
+    "autoupdate": "while true; do git pull && npm install; sleep 1200; done & npm start"
   },
-  "author": "NoaDevStudio",
-  "license": "ISC",
+  "keywords": [
+    "whatsapp",
+    "bot",
+    "baileys",
+    "noa"
+  ],
+  "author": "NoaDev",
+  "license": "MIT",
   "dependencies": {
-    "@whiskeysockets/baileys": "github:WhiskeySockets/Baileys",
-    "pino": "^9.0.0",
+    "@whiskeysockets/baileys": "^6.7.9",
+    "pino": "^9.3.2",
     "qrcode-terminal": "^0.12.0",
     "chalk": "^5.3.0",
-    "dayjs": "^1.11.11"
+    "dayjs": "^1.11.10"
   }
 }
