--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "bot-noa",
+  "name": "bot-single-file",
   "version": "1.0.0",
+  "description": "Un bot completo en un solo archivo.",
   "main": "index.js",
-  "scripts": { "start": "node index.js" },
+  "scripts": {
+    "start": "node index.js"
+  },
+  "author": "TuNombre",
+  "license": "ISC",
   "dependencies": {
-    "@whiskeysockets/baileys": "^5.0.16",
-    "pino": "^8.0.0"
+    "@whiskeysockets/baileys": "github:WhiskeySockets/Baileys",
+    "pino": "^9.0.0",
+    "qrcode-terminal": "^0.12.0",
+    "chalk": "^5.3.0",
+    "dayjs": "^1.11.11"
   }
 }
