--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "bot-single-file",
+  "name": "bot-actualizado",
   "version": "1.0.0",
-  "description": "Un bot completo en un solo archivo.",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "author": "TuNombre",
-  "license": "ISC",
+  "scripts": { "start": "node index.js" },
   "dependencies": {
     "@whiskeysockets/baileys": "github:WhiskeySockets/Baileys",
     "pino": "^9.0.0",
     "qrcode-terminal": "^0.12.0",
-    "chalk": "^5.3.0",
-    "dayjs": "^1.11.11"
-  }
+    "chalk": "^5.3.0"
+  },
+  "type": "module"
 }
