--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "bot-actualizado",
+  "name": "bot-final",
   "version": "1.0.0",
+  "description": "Bot simple con la versión más reciente de Baileys.",
   "main": "index.js",
-  "scripts": { "start": "node index.js" },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "@whiskeysockets/baileys": "github:WhiskeySockets/Baileys",
+    "@whiskeysockets/baileys": "^6.6.0",
     "pino": "^9.0.0",
     "qrcode-terminal": "^0.12.0",
     "chalk": "^5.3.0"
-  },
-  "type": "module"
+  }
 }
